--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+
+    <link rel="stylesheet" href="reset.css">
+
     <link rel="stylesheet" href="styles.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
@@ -14,13 +17,12 @@
 </head>
 <body>
     <h1>Spotify</h1>
-    <div class="sidebar"></div>
+    <div class="sidebar">
     <nav class="sidebar_navigation">
         <div class="logo">
             <a href="">
                 <img src="./assets/icons/logo-spotify.png" alt="logo do spotify">
             </a>
-            <div>
                 <ul>
                     <li>
                         <a href="">
@@ -35,8 +37,39 @@
                         </li>
                     </a>
                 </ul>
+                </nav>
+                
+                <div class="library">
+                    <div class="library__content">
+                        <button class="library__button">
+                            <span class="fa fas fa-book" ></span>
+                            <span>Sua Biblioteca</span>
+                        </button>
+                        <span class="fa fa-plus"></span>
+
+                    </div>
+                    <section class="section-playlist">
+                        <div class="section-playlist__content">
+                            <span class="text title">Crie sua primeira playlist</span>
+                            <span class="text subtitle">É fácil, vamos te ajudar.</span>
+                            <button class="section-playlist__button">
+                                <span>Criar playlist</span>
+                            </button>
+                        </div>
+                    </section>
+
+                    <div class="cookies">
+                        <a href="">cookies</a>
+                    </div>
+                    <div class="languages">
+                        <button class="languages__button">
+                            <span class="fa fa-globe"></span>
+                            <span>Português do Brasil</span>
+                        </button>
+                    </div>
+                </div>
+                
             </div>
-        </div>
-    </nav>
+        </div> 
 </body>
 </html>
